[package]
name = "adventofcode2017-clp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[features]
# default = ["day_18_with_channels"]
slow = []
utils = []
day_18_with_channels = []

[dependencies]
anyhow = "1.0.86"
itertools = "0.13.0"
num = "0.4.3"
regex = "1.10.6"
strum = { version = "0.26.3", features = ["derive"] }
