[package]
name = "adventofcode2017-clp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[features]
slow = []
utils = []

[dependencies]
anyhow = "1.0.89"
itertools = "0.13.0"
num = "0.4.3"
paste = "1.0.15"
primes = "0.4.0"
regex = "1.10.6"
strum = { version = "0.26.3", features = ["derive"] }
